--- a/todo.txt
+++ b/todo.txt
@@ -46,6 +46,8 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
+- Figure out how to test fixed-width drawing area without it breaking when test browser is narrower than drawing area
+  - Implement iframe
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
