--- a/todo.txt
+++ b/todo.txt
@@ -48,6 +48,7 @@ Goal: expect(css("myHeadline").isCentered()).to.be(true)
 To Do on current task:
 - Figure out how to test fixed-width drawing area without it breaking when test browser is narrower than drawing area
   - Implement iframe
+- Change Karma to use 'dots' reporter (avoids text-repeating bug)
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
