_server_test creates test files asynchronously so it works on Windows
The new version of send (0.2.0 --> 0.9.3) caused the second test to throw
an EPERM exception while creating the test files. I think it's related
to node issue #6599. It's resolved by using asynchronous fs operations rather
than synchronous.

--- a/todo.txt
+++ b/todo.txt
@@ -51,6 +51,7 @@ To Do on current task:
   - updated dependencies (and added to package.json)
     - modified Jakefile.js: browserify no longer supports option arguments
     - modified server.js: send now takes root as an option
+    - modified _server_test.js: new version of send triggers EPERM on Windows; need async file creation
     - modified autojake.js: gaze no longer installs on vanilla Windows, so removed it from repo
   - integrated
 
