Got all CSS tests working with index.html, except 2 on Firefox

--- a/todo.txt
+++ b/todo.txt
@@ -47,6 +47,7 @@ Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
 * Modify test to use real index.html
+- Speed up CSS tests
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
