--- a/todo.txt
+++ b/todo.txt
@@ -46,7 +46,7 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-* Speed up CSS tests
+* Factor out class handling for :hover and :active states
 - Take out HtmlElement usage?
 
 Notes:
