Extracted frameDom variable in CSS tests

--- a/todo.txt
+++ b/todo.txt
@@ -30,15 +30,12 @@ Potential future stories:
 
 Engineering Tasks:
 * Implement each design element
-- Test that style sheet is actually being loaded by index.html
 - Need to test arrow's background elements--is there a clean way of doing this?
   - Consider using :before pseudoelement rather than a separate div
   - Consider using Martin Grandrath's CSS triangle trick (see comments E225)
 - Need to cache-bust stylesheet and bundle.js
 - Manually confirm that styling works cross-platform
 - What about alt tags? Semantic markup?
-- Fix old test breakage that occurs when changing body margins (don't assume body margins? don't always load CSS?)
-- How do we deal with errors related to CSS test HTML and production HTML having different structure?
 - Need to isolate Safari problem that occurs with getBoundingClientRect and getComputedStyle()
   - See 'create iOS Safari failure' test (ref E229)
 - Automatically convert psuedoclasses to regular classes in our tests?
@@ -46,7 +43,7 @@ Engineering Tasks:
 Goal: expect(css("myHeadline").isCentered()).to.be(true)
 
 To Do on current task:
-- Take out HtmlElement usage?
+- Integrate
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
