--- a/todo.txt
+++ b/todo.txt
@@ -29,7 +29,10 @@ Potential future stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-* Implement each design element
+* Built-in fonts
+- @font-face
+- Typekit?
+
 - Need to test arrow's background elements--is there a clean way of doing this?
   - Consider using :before pseudoelement rather than a separate div
   - Consider using Martin Grandrath's CSS triangle trick (see comments E225)
@@ -40,10 +43,7 @@ Engineering Tasks:
   - See 'create iOS Safari failure' test (ref E229)
 - Automatically convert psuedoclasses to regular classes in our tests?
 
-Goal: expect(css("myHeadline").isCentered()).to.be(true)
-
 To Do on current task:
-- Integrate
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
