All parts of page use 'Varela Round' font

--- a/todo.txt
+++ b/todo.txt
@@ -29,8 +29,7 @@ Potential future stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-* @font-face
-- Typekit?
+* Typekit?
 
 - Need to test arrow's background elements--is there a clean way of doing this?
   - Consider using :before pseudoelement rather than a separate div
