Now using alwyn-new-rounded-web from Typekit, not VeralaRound

--- a/todo.txt
+++ b/todo.txt
@@ -42,7 +42,8 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-* Is there a way to tell if the font is actually loaded?
+* How do we test Typekit appropriately?
+- Look at font weights
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
