--- a/todo.txt
+++ b/todo.txt
@@ -29,7 +29,7 @@ Potential future stories:
     (needs to depend on 'build'; just running foreman could give us outdated files)
 
 Engineering Tasks:
-* Typekit
+* How do we test (or not) Typekit?
 
 - Need to test arrow's background elements--is there a clean way of doing this?
   - Consider using :before pseudoelement rather than a separate div
@@ -42,10 +42,9 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-* AT START OF EPISODE
-  - Removed VarelaRound and changed Jakefile
-- How do we test Typekit appropriately?
-- Look at font weights
+- AT START OF EPISODE:
+  - Body copy
+* How do we test Typekit appropriately?
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
