Migrated font smoke test from timeout to polling

--- a/todo.txt
+++ b/todo.txt
@@ -48,9 +48,7 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-- Figure out how to test fonts as quickly as they're loaded, without a race-condition timeout?
-- Should we hardcode expected fonts, or programmatically get them out of CSS?
-- Build isn't failing when font isn't found
+* Should we hardcode expected fonts, or programmatically get them out of CSS?
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
