--- a/todo.txt
+++ b/todo.txt
@@ -31,6 +31,7 @@ Potential future stories:
 - Scalability
 - Deploy (including smoke test to ensure that div is in home page)
     (needs to depend on 'build'; just running foreman could give us outdated files)
+- Laurent Bourgalt-Roy, E263: fail-fast code (use in devops chapter?)
 
 Engineering Tasks:
 * How do we smoke test Typekit is loading correctly?
@@ -48,11 +49,10 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-- AT START OF NEXT EPISODE:
-  - Martin Grandrath, E263: event-based solution to font loading
-  - Laurent Bourgalt-Roy, E263: fail-fast code (use in devops chapter?)
-  - Rather than looking at stylesheet, descend the DOM?
-* Should we hardcode expected fonts, or programmatically get them out of CSS?
+* Attempt to programmatically determine expected fonts from CSS
+- Rather than looking at stylesheet, descend the DOM?
+- Should we used Martin Grandrath's event-based solution to font loading (E263 comments)
+
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
