--- a/todo.txt
+++ b/todo.txt
@@ -48,7 +48,9 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-- Should we used Martin Grandrath's event-based solution to font loading (E263 comments)
+- AT BEGINNING OF EPISODE:
+  - Git vulnerability
+- Should we use Martin Grandrath's event-based solution to font loading (E263 comments)?
 
 
 Notes:
