--- a/todo.txt
+++ b/todo.txt
@@ -51,6 +51,7 @@ To Do on current task:
 - AT BEGINNING OF EPISODE:
   - Git vulnerability
   - PhantomJS performance problems: https://github.com/ariya/phantomjs/issues/10488
+  - WebdriverJS 2.43 no longer relies on Java (released Sept 12)
 - Should we use Martin Grandrath's event-based solution to font loading (E263 comments)?
 
 
