--- a/todo.txt
+++ b/todo.txt
@@ -35,10 +35,11 @@ Potential future stories:
 - Laurent Bourgalt-Roy, E263: fail-fast code (use in devops chapter?)
 
 Engineering Tasks:
-- Rewrite 'checkDrawingArea' PhantomJS test in Selenium
+* Rewrite 'checkDrawingArea' PhantomJS test in Selenium
 - Rewrite 'checkFonts' PhantomJS test in Selenium
   - Should we use Martin Grandrath's event-based solution to font loading (E263 comments)?
 - Remove PhantomJS and its tests
+- Migrate from NodeUnit to Mocha
 - Create a 'quick' build target that runs in <5 seconds
 - How do we not test Typekit when we're just testing CSS?
 
