Ported webfont test to Selenium, but it's failing with SecurityError

--- a/todo.txt
+++ b/todo.txt
@@ -53,7 +53,9 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-* Figure out how to wait for fonts to finish loading (in Selenium)
+* Figure out how to access sheet.cssRules without having Firefox a SecurityError
+- Finish porting webfont test
+
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
