--- a/todo.txt
+++ b/todo.txt
@@ -50,7 +50,8 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-* Clean everything up
+* BEFORE NEXT EPISODE:
+  - Figure out why browsers are timing out
 
 Notes:
 - NodeUnit default reporter has minor display issue on Windows
