--- a/todo.txt
+++ b/todo.txt
@@ -26,10 +26,12 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * Only lint files that have changed (goal: > 0.1s  <1.1s)
-- Migrate from NodeUnit to Mocha
 - General cleanup of build script
   - Clean up CI script?
   - Use automatopia ideas
+- Additional incremental builds? (server tests, client tests)
+- Run slow tests in parallel with fast tests? (suggested by Danny Jones, E280 comments)
+- Migrate from NodeUnit to Mocha
 - Add HTML validation / linting?
 
 - How do we not test Typekit when we're just testing CSS?
@@ -46,9 +48,10 @@ Engineering Tasks:
 
 To Do on current task:
 * Clean up our lint spike and make it part of our regular build
+  - Note: glob.sync is as fast as regular async glob. Actually, it's slightly faster (!).
+  - Consider multi-glob: https://github.com/busterjs/multi-glob (async only)
 - How do we lint client code differently than server-side code?
   - Martin Grandrath: simplify by removing for loop, separate lint options (E283 comments)
-- Can we make directory scanning faster?
 - Migrate to simplebuild-jshint module
 
 Notes:
