--- a/todo.txt
+++ b/todo.txt
@@ -25,8 +25,7 @@ User Stories to finish current MMF:
 - Release new design
 
 Engineering Tasks:
-* Only lint files that have changed (goal: > 0.1s  <1.1s)
-- General cleanup of build script
+* General cleanup of build script
   - Clean up CI script?
   - Use automatopia ideas
 - Additional incremental builds? (server tests, client tests)
@@ -47,9 +46,6 @@ Engineering Tasks:
 - Automatically convert psuedoclasses to regular classes in our tests?
 
 To Do on current task:
-* Clean up our lint spike and make it part of our regular build
-- How do we lint client code differently than server-side code?
-  - Martin Grandrath: simplify by removing for loop, separate lint options (E283 comments)
 - Migrate to simplebuild-jshint module
 - Where should 'nodeVersion' dependency go?
 
