Build runs Mocha on server-side code

--- a/todo.txt
+++ b/todo.txt
@@ -32,6 +32,7 @@ User Stories to finish current MMF:
 
 Engineering Tasks:
 * Migrate from NodeUnit to Mocha
+- Migrate from Expect.js to a better assertion library
 - General cleanup of build script
   - Move .lint files to 'incremental' dir, preserve '.js' extension (suggested by Jay Bazuzi, E282 comments)
   - Use automatopia ideas
